--- a/css/style.css
+++ b/css/style.css
@@ -7,18 +7,30 @@ a{
     text-decoration: none;
     color: #000;
 }
+
+button{
+    background: none;
+    border: none;
+}
+
 html, body{
     height: 100%;
 }
+
 body{
+    width: 100%;    
+    max-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;    
+    background-color: #fff;
 }
 
 #divPadre{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     max-width: 1400px;
     width: 100%;
     height: 100%;
@@ -45,7 +57,7 @@ header .navbar{
     justify-content: space-between;
 }
 
-header .navbar a, .fas{
+header .navbar a, header .navbar .fas{
     font-size: 18pt;
     font-weight: bold;
     cursor: pointer;
@@ -78,18 +90,103 @@ header nav *{
 }
 
 main{
+    max-width: 500px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#listaDeTareas, #listaDeTareasCompletadas{
+main #agregarTarea{
+    width: 100%;
+    margin-top: 50px;
+    padding: 10px;
+}
+
+main #agregarTarea form{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     width: 100%;
 }
 
-.tarea{    
+#agregarTarea input, #agregarTarea button{
+    height: 45px;
+}
+
+#agregarTarea input{
+    width: 100%;
+    font-size: 10.5pt;
+    padding: 5px;
+}
+
+#agregarTarea button{
+    cursor: pointer;
+    font-size: 18pt;
+    color: #fff;
+    width: 50px;
+    background-color: #8B5DFF;
+}
+
+#agregarTarea button:hover{
+    box-shadow: 0px 0px 17px 4px #8b5dff;
+    transition: box-shadow 0.3s ease;
+}
+
+main table{
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 50px;
+}
+
+table td{
+    padding: 0 10px 10px 10px;
+}
+
+table .tarea{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;    
-    align-items: self-end;
+    align-items: stretch;
+    justify-content: space-between;
+    min-height: 40px;
+    background-color: #f1f1f1;
+    gap: 15px;
+}
+
+table .descripcion-tarea{
+    align-content: center;
+    font-size: 12pt;
+    padding: 5px;
+}
+
+table .btns-tarea{
+    display: flex;
+}
+
+table .btns-tarea .fas{
+    font-size: 15pt;
+    align-content: center;
+    text-align: center;
+    color: white;
+    padding: 8px;
+    min-width: 36px;
+    cursor: pointer;
+}
+
+table .fa-check{
+    background-color: #6dff44;
+}
+
+table .fa-check:hover{
+    box-shadow: 0px 0px 17px 2px #39e60a;
+    transition: box-shadow 0.3s ease;
+}
+
+table .fa-times{
+    background-color: #ff446d;
+}
+
+table .fa-times:hover{
+    box-shadow: 0px 0px 17px 2px #ff446d;
+    transition: box-shadow 0.3s ease;
 }
