--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ a{
 button{
     background: none;
     border: none;
+    cursor: pointer;
 }
 
 html, body{
@@ -18,8 +19,6 @@ html, body{
 }
 
 body{
-    width: 100%;    
-    max-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,16 +32,13 @@ body{
     align-items: center;
     max-width: 1400px;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 header{
     height: auto;
     background-color: #fff;    
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 header div{
@@ -90,25 +86,24 @@ header nav *{
 }
 
 main{
-    max-width: 500px;
+    padding: 0 10px;
+    max-width: 700px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center;    
+    flex: 1;
+    overflow: auto;
 }
 
-main #agregarTarea{
+#agregarTarea{
     width: 100%;
-    margin-top: 50px;
-    padding: 10px;
-}
-
-main #agregarTarea form{
+    margin-top: 50px;    
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
-    width: 100%;
+    align-items: center;    
+    margin-bottom: 50px;
 }
 
 #agregarTarea input, #agregarTarea button{
@@ -117,8 +112,9 @@ main #agregarTarea form{
 
 #agregarTarea input{
     width: 100%;
-    font-size: 10.5pt;
+    font-size: 12pt;
     padding: 5px;
+    font-weight: 500;
 }
 
 #agregarTarea button{
@@ -134,14 +130,19 @@ main #agregarTarea form{
     transition: box-shadow 0.3s ease;
 }
 
+main .contenedor-table{
+    flex: 1;
+    overflow: auto;
+    width: 100%;
+}
+
 main table{
     width: 100%;
-    border-collapse: collapse;
-    margin-top: 50px;
+    border-collapse: collapse;    
 }
 
 table td{
-    padding: 0 10px 10px 10px;
+    padding: 0 0 10px 0;
 }
 
 table .tarea{
@@ -196,8 +197,9 @@ table .tarea-completada{
     text-decoration: line-through;
     color: #444;
     font-style: italic;
+    font-weight: bold;
     background-color: rgba(0, 0, 0, .2);
-    transition: background-color 1s ease;
+    transition: background-color 1s ease, font-weight 1s ease;
 
     .fa-check{
         opacity: 0;                
@@ -205,8 +207,39 @@ table .tarea-completada{
     }
 }
 
-
 table .tarea-eliminada{
     opacity: 0;
     transition: opacity 0.5s ease;
+}
+
+footer{
+    margin-top: 50px;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    gap: 10px;
+    width: 100%;
+    background-color: #444;
+    
+}
+
+footer .col{
+    flex: 1;
+}
+
+footer h4{
+    font-size: 10pt;
+    text-align: left;
+    color: #fff;
+}
+
+footer button{
+    cursor: pointer;
+    font-size: 15pt;
+    text-align: end;
+}
+
+footer i{
+    color: #fff;
+    
 }
